# poc-infra

./: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
laboratory/: main.py
